2000-01-25  Kelly Lynn Martin  <kelly@poverty.bloomington.in.us>

	* gtk.py (gdk_beep): new wrapper
	* gtkmodule.c (_wrap_gdk_beep): new implementation

2000-01-21  Matt Wilson  <msw@redhat.com>

	* generate/generate.py: add a hack to allow a null-ok flag on the
	return type.  This lets us create wrappers which return None if
	the C function returns NULL.

	* generate/gtklists.defs (gtk_ctree_node_nth): return None when
	gtk_ctree_node_nth returns NULL.

2000-01-20  Matt Wilson  <msw@redhat.com>

	* gtkmodule.c (PyGtk_New): disable object sinking for now, until
	we rework the .def file and generation routines to know which
	functions are creators.

2000-01-20  Matt Wilson  <msw@redhat.com>

	* gtk.py (GtkCList.row_move): s/soure_row/source_row/g typo

2000-01-17  Matt Wilson  <msw@redhat.com>

	* gtkmodule.c: following changes from ChiDeok Hwang
	<cdhwang@sr.hei.co.kr>

	* gtkmodule.c (_wrap_gtk_adjustment_set_all): parse the 6 optional
	arguments.

	* gtkmodule.c (_wrap_gtk_widget_draw,
	_wrap_gtk_widget_size_allocate, _wrap_gtk_widget_intersect,
	_wrap_gdk_color_alloc): fix PyArg_ParseTuple format strings to use
	shorts instead of ints where necessary.

	* gtkmodule.c (_wrap_gtk_toolbar_insert_item): check to make sure
	callback isn't Py_None before Py_INCREF()

	* gtkmodule.c (_wrap_gtk_toolbar_insert_item,
	_wrap_gtk_toolbar_append_item, _wrap_gtk_toolbar_prepend_item):
	fix broken ParseTuple specification strings.

	* gtkmodule.c (_wrap_gtk_clist_get_selection): use
	GPOINTER_TO_UINT to get row.
	
2000-01-17  Matt Wilson  <msw@redhat.com>

	* libglademodule.c (connect_one, _wrap_glade_xml_signal_connect):
	don't INCREF objects passed into Py_BuildValue as they are
	INCREF'ed for you automatically.  Pass new PyObjects in with 'N'
	to consume the reference.

	* gtkmodule.c (PyGtk_New): sink the object upon creation.  We
	don't want floating GtkObjects.

	* gtkmodule.c: general cleanups, testing for success of PyObject