@@ -1,3 +1,12 @@
+2000-01-26  James Henstridge  <james@daa.com.au>
+
+	* gtk.py (GtkObject.__hash__): use C level GtkObject for hash
+	function.
+	(GtkAccelGroup.__cmp__): use C level object for comparisons.
+	(GtkAccelGroup.__hash__): use C level object for hashing.
+
+	* gtkmodule.c: added hash functions for many object types.
+
 2000-01-25  Kelly Lynn Martin  <kelly@poverty.bloomington.in.us>
 
 	* gtk.py (gdk_beep): new wrapper
